--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
-    "@truffle/hdwallet-provider": "^1.0.40",
+    "@truffle/hdwallet-provider": "^1.7.0",
     "canvas": "^2.8.0",
+    "dotenv": "^16.0.0",
     "sha1": "^1.1.1",
     "truffle-plugin-verify": "^0.5.15"
   }
